--- a/website/base/templates/registration/logout.html
+++ b/website/base/templates/registration/logout.html
@@ -1,4 +1,4 @@
-<form method="POST" action="{% url 'logout' %}" class="logout-form">
+<form method="POST" action="{% url "Logout" %}" class="logout-form">
     {% csrf_token %}
     <button type="submit">Logout</button>
 </form>
