waxaan u sameeyey css

--- a/website/base/templates/base/index.html
+++ b/website/base/templates/base/index.html
@@ -1,2 +1,6 @@
-<h1>Page Koowaad</h1>
-<a href="{% url "base:Logout" %}">Logout</a>
+
+{% extends "base.html" %}
+{% block content %}
+    <h4>Bogga Hore</h4>
+    <a href="{% url "base:Logout" %}">Logout</a>
+{% endblock content %}
