--- a/website/base/templates/registration/signup.html
+++ b/website/base/templates/registration/signup.html
@@ -1,6 +1,15 @@
-djdj
-<form method="post">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">signup</button>
-</form>
+{% extends "base.html" %}
+
+
+{% block signup %}
+<div class="shadow-wrap">
+    <div class="form-wrap">
+        <form method="post">
+            {% csrf_token %}
+            {{ form }}
+            <button type="submit">signup</button>
+        </form>
+        <a href="{% url "base:login" %}" class="signup-link">Login</a>
+    </div>
+</div>
+{% endblock signup %}
